README 파일을 프로젝트에 추가

--- a/DefenseKingdom.vcxproj.filters
+++ b/DefenseKingdom.vcxproj.filters
@@ -19,4 +19,10 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="LICENSE.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
 </Project>
